# TraceWeaver

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
.cursor/rules/: backend.mdc  basic.mdc  database.mdc  embedding.mdc  (+3 more)
backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.yaml.template  pyproject.toml
backend/app/: main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2026_01_03_0208_7c9c53883c9d_init.py  2026_01_03_1447_fe24ba25e5c3_add_activity_source_config_tables.py  2026_01_04_0116_4048e1a2d6c1_vlm_image_analysis.py  2026_01_04_0145_f447575315ba_llm.py  2026_01_05_0035_485866665930_add_extra_info.py  2026_01_10_0200_a982006e4436_activity_embedding.py  2026_01_10_0310_435f60a3fffe_add_1024_vector.py  2026_01_10_0310_a122ff0b2c49_del_emb_field.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: debug.py  image_analyses.py  llm_model_configs.py  llm_prompts.py  login.py  source_configs.py  users.py
backend/app/clients/: __init__.py
backend/app/clients/llm/: __init__.py  client.py  schema.py
backend/app/clients/siyuan/: __init__.py  client.py  schema.py
backend/app/connectors/: __init__.py  base.py  registry.py
backend/app/connectors/impl/: dayflow_connector.py  dayflow_local_connector.py  git_connector.py  siyuan_connector.py
backend/app/core/: celery_app.py  config.py  context.py  db.py  exceptions.py  logger.py  middleware.py  queue_.py  security.py
backend/app/crud/: __init__.py  activity.py  base.py  image_analysis.py  llm_model_config.py  llm_prompt.py  source_config.py  user.py  vlm_prompt.py
backend/app/models/: __init__.py  activity.py  activity_embedding.py  enums.py  image_analysis.py  llm_model_config.py  llm_prompt.py  source_config.py  user.py  vlm_prompt.py
backend/app/schemas/: activity.py  image_analysis.py  llm.py  llm_model_config.py  llm_prompt.py  siyuan.py  source_config.py  vlm.py
backend/app/services/: embedding_service.py  image_analysis_service.py  sync_service.py
backend/app/services/chunkers/: __init__.py  base.py  time_block_chunker.py
backend/app/workers/: __init__.py  llm_image_worker.py  tasks.py  vlm_image_worker.py
backend/scripts/: embed_dayflow.py  siyuan_demo.py  start_vlm_worker.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_login.py  test_private.py  test_users.py
backend/tests/crud/: test_crud_base.py  test_image_analysis_relationship.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: user.py  utils.py
docs/: API_CONVENTIONS.md  ARCHITECTURE.md  DATA_SOURCE_GUIDE.md
frontend/: Dockerfile.dev  README.md  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+35 files in other folders)
