[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "pyjwt<3.0.0,>=2.8.0",
    "loguru>=0.7.3",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "pgvector>=0.3.0",
]
[project.optional-dependencies]
git = [
    "gitpython>=3.1.46",
]
sentry = [
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
]
vlm = [
    "ollama>=0.6.1",
    "agno>=2.3.21",
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",
    "openai>=2.14.0",
]


[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "prek>=0.2.24,<1.0.0",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
    "uvicorn==0.38.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
# 和 black 统一，避免格式冲突
line-length = 88
target-version = "py310"
exclude = ["alembic"]

# 允许 ruff 自动修复
fix = true

[tool.ruff.lint]
# 默认开启的规则集（推荐）
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes（F811 在这里）
    "W",    # pycodestyle warnings
    "I",    # isort
    "ARG",  # unused arguments
]

# 全局忽略的规则
ignore = [
    "ARG001",  # 未使用的函数参数（FastAPI 依赖注入常见）
    "ARG002",  # 未使用的方法参数（protocol/interface 实现中常见）
    "E712",    # == True / == False
    "E501",    # line too long, handled by black
    "F821",    # forward reference 在类型注解中合法
]

# 明确声明：哪些规则"可以被修复"
fixable = [
    "F811",  # 变量 / 函数重复定义（自动移除重复）
    "F401",  # 未使用的导入（自动移除）
    "I",     # import 排序
    "E",     # 部分 pycodestyle
]

# 哪些规则即使 fix=true 也不要自动修
unfixable = []

# FastAPI / 依赖注入场景下非常重要
[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

# 针对特定文件的忽略规则
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # __init__.py 中允许未使用的导入和 * 导入
"tests/**/*.py" = ["F811", "F841", "ARG"]  # 测试文件中允许重复定义、未使用变量和未使用参数

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
